--- a/projekt/test.html
+++ b/projekt/test.html
@@ -7,41 +7,41 @@
 <tr> 
 <td id="day">Poniedzialek</td>
 <td id="temp">-5</td>
-<td id="wiatr">13 km/h</td>
+<td id="wind">13 km/h</td>
 </tr>
 
 <tr> 
 <td id="day">Wtorek</td>
 <td id="temp">-15</td>
-<td id="wiatr">13 km/h</td>
+<td id="wind">13 km/h</td>
 
 </tr>
 
 <tr> 
 <td id="day">Sroda</td>
 <td id="temp">10</td>
-<td id="wiatr">13 km/h</td>
+<td id="wind">18 km/h</td>
 
 </tr>
 
 <tr> 
 <td id="day">Czwartek</td>
 <td id="temp">12</td>
-<td id="wiatr">13 km/h</td>
+<td id="wind">25 km/h</td>
 
 </tr>
 
 <tr> 
 <td id="day">Piatek</td>
 <td id="temp">20</td>
-<td id="wiatr">13 km/h</td>
+<td id="wind">14 km/h</td>
 
 </tr>
 
 <tr> 
 <td id="day">Poniedzialek</td>
 <td id="temp">-5</td>
-<td id="wiatr">13 km/h</td>
+<td id="wind">12 km/h</td>
 
 </tr>
 
