create history on server

--- a/projekt/index.html
+++ b/projekt/index.html
@@ -50,6 +50,8 @@
 				</tr>
 			</table>
 			</form>
+
+			<a href="getJson.html">Pokaż historię z bazy danych</a>
 		</div>
 	</div>
 	<!-- end content -->
